# desktopd

./: .env  .gitignore  Cargo.toml  README.md
migrations/2022-07-31-130130_app/: down.sql  up.sql
migrations/2022-07-31-141108_names/: down.sql  up.sql
migrations/2022-07-31-145605_comments/: down.sql  up.sql
migrations/2022-07-31-145614_keywords/: down.sql  up.sql
migrations/2022-07-31-145624_generic_names/: down.sql  up.sql
migrations/2022-11-26-183044_locale/: down.sql  up.sql
migrations/2022-11-26-190715_app_locale/: down.sql  up.sql
src/: collect.rs  desktop.rs  lib.rs  main.rs  models.rs  schema.rs  watch.rs
src/db/: basic.rs  mod.rs  populate.rs  search.rs
tests/: collect.rs  desktop.rs
tests/test1/path-1/applications/: app-one.desktop
