[package]
name = "desktopd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
tempfile = "3.3"
fs_extra = "1.2"
glob = "0.3"
rust-ini = "0.18"
inotify = "0.10"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
